--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   </head>
   <body>
     <script src="https://ajax.googleapis.com/ajax/libs/threejs/r83/three.min.js"></script>
-    <script src="main.js"></script>
+    <script src="js/orbitControls.js"></script>
+    <script src="js/main.js"></script>
   </body>
 </html>
